...
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_matches">Matches</string>
    <string name="menu_calender">Calendar</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="agree_and_register">Agree and Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="createAccountErrorFilledIn">Must fill out all sections</string>
    <string name="createAccountErrorBadEmail">Must be a valid UCSD email</string>
    <string name="createAccountErrorMismatchPassword">Passwords do not match</string>
    <string name="ucsdDomain">ucsd.edu</string>
    <string name="accountCreationFailed">Failed to create account</string>
    <string name="accountCreationSuccess">Account created</string>
...
    <string name="resetPasswordSuccess">Email Sent!</string>
    <string name="loading_calendar">Calendar Loading</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="activity_array">
        <item>Select Activity</item>
        <item>Gym</item>
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Volleyball</item>
        <item>Tennis</item>
        <!-- Add more options if needed -->
    </string-array>

    <string-array name="location_array">
        <item>Select Location</item>
        <item>Rimac</item>
        <item>24hr Fitness UTC</item>
        <item>Canyonview</item>
        <item>Graduate Housing</item>
        <!-- Add more options if needed -->
    </string-array>

...
