...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/light_blue_button"
        android:padding="10dp"
        android:text="@string/register"
...
