<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_matches"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_calender"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/menu_preferences" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />


    </group>
</menu>